--- a/登录界面.html
+++ b/登录界面.html
@@ -66,7 +66,7 @@
             <div id="u2" class="ax_default _默认样式">
               <img id="u2_img" class="img " src="images/登录界面/u2.svg"/>
               <div id="u2_text" class="text ">
-                <p><span>后台管理系统框架原型模板</span></p>
+                <p><span>暨南大学毕业论文选题系统</span></p>
               </div>
             </div>
 
