--- a/学生查看老师信息.html
+++ b/学生查看老师信息.html
@@ -50,29 +50,29 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u340" class="ax_default _默认样式">
-        <div id="u340_div" class=""></div>
-        <div id="u340_text" class="text " style="display:none; visibility: hidden">
+      <div id="u471" class="ax_default _默认样式">
+        <div id="u471_div" class=""></div>
+        <div id="u471_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- footer (组合) -->
-      <div id="u341" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
+      <div id="u472" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
 
         <!-- Unnamed (矩形) -->
-        <div id="u342" class="ax_default _默认样式">
-          <img id="u342_img" class="img " src="images/登录界面/u21.svg"/>
-          <div id="u342_text" class="text ">
-            <p><span>Copyright © </span><a id="u343" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u344" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
+        <div id="u473" class="ax_default _默认样式">
+          <img id="u473_img" class="img " src="images/登录界面/u21.svg"/>
+          <div id="u473_text" class="text ">
+            <p><span>Copyright © </span><a id="u474" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u475" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
           </div>
         </div>
       </div>
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u345" class="ax_default" data-label="灰色背景">
-        <div id="u345_state0" class="panel_state" data-label="State1" style="">
-          <div id="u345_state0_content" class="panel_state_content">
+      <div id="u476" class="ax_default" data-label="灰色背景">
+        <div id="u476_state0" class="panel_state" data-label="State1" style="">
+          <div id="u476_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
@@ -80,90 +80,90 @@
       <!-- Unnamed (顶部通栏) -->
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u347" class="ax_default" data-label="灰色背景">
-        <div id="u347_state0" class="panel_state" data-label="State1" style="">
-          <div id="u347_state0_content" class="panel_state_content">
+      <div id="u478" class="ax_default" data-label="灰色背景">
+        <div id="u478_state0" class="panel_state" data-label="State1" style="">
+          <div id="u478_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 线条 (动态面板) -->
-      <div id="u348" class="ax_default" data-label="线条">
-        <div id="u348_state0" class="panel_state" data-label="State1" style="">
-          <div id="u348_state0_content" class="panel_state_content">
+      <div id="u479" class="ax_default" data-label="线条">
+        <div id="u479_state0" class="panel_state" data-label="State1" style="">
+          <div id="u479_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 页面标题 (矩形) -->
-      <div id="u349" class="ax_default _默认样式" data-label="页面标题">
-        <div id="u349_div" class=""></div>
-        <div id="u349_text" class="text ">
-          <p><span>课题列表</span></p>
+      <div id="u480" class="ax_default _默认样式" data-label="页面标题">
+        <div id="u480_div" class=""></div>
+        <div id="u480_text" class="text ">
+          <p><span>教师课题管理</span></p>
         </div>
       </div>
-      <div id="u346" style="display:none; visibility:hidden;"></div>
+      <div id="u477" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (图片 ) -->
-      <div id="u350" class="ax_default image">
-        <img id="u350_img" class="img " src="images/学生查看老师信息/u350.jpg"/>
-        <div id="u350_text" class="text " style="display:none; visibility: hidden">
+      <div id="u481" class="ax_default image">
+        <img id="u481_img" class="img " src="images/学生查看老师信息/u481.jpg"/>
+        <div id="u481_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u351" class="ax_default label">
-        <div id="u351_div" class=""></div>
-        <div id="u351_text" class="text ">
+      <div id="u482" class="ax_default label">
+        <div id="u482_div" class=""></div>
+        <div id="u482_text" class="text ">
           <p><span>姓名：xxx</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u352" class="ax_default label">
-        <div id="u352_div" class=""></div>
-        <div id="u352_text" class="text " style="display:none; visibility: hidden">
+      <div id="u483" class="ax_default label">
+        <div id="u483_div" class=""></div>
+        <div id="u483_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u353" class="ax_default label">
-        <div id="u353_div" class=""></div>
-        <div id="u353_text" class="text ">
+      <div id="u484" class="ax_default label">
+        <div id="u484_div" class=""></div>
+        <div id="u484_text" class="text ">
           <p><span>学院：智能科学与工程学院</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u354" class="ax_default label">
-        <div id="u354_div" class=""></div>
-        <div id="u354_text" class="text ">
+      <div id="u485" class="ax_default label">
+        <div id="u485_div" class=""></div>
+        <div id="u485_text" class="text ">
           <p><span>办公室：行政楼603</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u355" class="ax_default label">
-        <div id="u355_div" class=""></div>
-        <div id="u355_text" class="text ">
+      <div id="u486" class="ax_default label">
+        <div id="u486_div" class=""></div>
+        <div id="u486_text" class="text ">
           <p><span>联系电话：1111111111111</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u356" class="ax_default label">
-        <div id="u356_div" class=""></div>
-        <div id="u356_text" class="text ">
+      <div id="u487" class="ax_default label">
+        <div id="u487_div" class=""></div>
+        <div id="u487_text" class="text ">
           <p><span>邮箱：1111111@qq.com</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u357" class="ax_default primary_button">
-        <div id="u357_div" class=""></div>
-        <div id="u357_text" class="text ">
+      <div id="u488" class="ax_default primary_button">
+        <div id="u488_div" class=""></div>
+        <div id="u488_text" class="text ">
           <p><span>返回</span></p>
         </div>
       </div>
