--- a/学生查看选题结果.html
+++ b/学生查看选题结果.html
@@ -50,29 +50,29 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u358" class="ax_default _默认样式">
-        <div id="u358_div" class=""></div>
-        <div id="u358_text" class="text " style="display:none; visibility: hidden">
+      <div id="u489" class="ax_default _默认样式">
+        <div id="u489_div" class=""></div>
+        <div id="u489_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- footer (组合) -->
-      <div id="u359" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
+      <div id="u490" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
 
         <!-- Unnamed (矩形) -->
-        <div id="u360" class="ax_default _默认样式">
-          <img id="u360_img" class="img " src="images/登录界面/u21.svg"/>
-          <div id="u360_text" class="text ">
-            <p><span>Copyright © </span><a id="u361" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u362" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
+        <div id="u491" class="ax_default _默认样式">
+          <img id="u491_img" class="img " src="images/登录界面/u21.svg"/>
+          <div id="u491_text" class="text ">
+            <p><span>Copyright © </span><a id="u492" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u493" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
           </div>
         </div>
       </div>
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u363" class="ax_default" data-label="灰色背景">
-        <div id="u363_state0" class="panel_state" data-label="State1" style="">
-          <div id="u363_state0_content" class="panel_state_content">
+      <div id="u494" class="ax_default" data-label="灰色背景">
+        <div id="u494_state0" class="panel_state" data-label="State1" style="">
+          <div id="u494_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
@@ -80,153 +80,153 @@
       <!-- Unnamed (顶部通栏) -->
 
       <!-- 灰色背景 (动态面板) -->
-      <div id="u365" class="ax_default" data-label="灰色背景">
-        <div id="u365_state0" class="panel_state" data-label="State1" style="">
-          <div id="u365_state0_content" class="panel_state_content">
+      <div id="u496" class="ax_default" data-label="灰色背景">
+        <div id="u496_state0" class="panel_state" data-label="State1" style="">
+          <div id="u496_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 线条 (动态面板) -->
-      <div id="u366" class="ax_default" data-label="线条">
-        <div id="u366_state0" class="panel_state" data-label="State1" style="">
-          <div id="u366_state0_content" class="panel_state_content">
+      <div id="u497" class="ax_default" data-label="线条">
+        <div id="u497_state0" class="panel_state" data-label="State1" style="">
+          <div id="u497_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- 页面标题 (矩形) -->
-      <div id="u367" class="ax_default _默认样式" data-label="页面标题">
-        <div id="u367_div" class=""></div>
-        <div id="u367_text" class="text ">
-          <p><span>课题列表</span></p>
+      <div id="u498" class="ax_default _默认样式" data-label="页面标题">
+        <div id="u498_div" class=""></div>
+        <div id="u498_text" class="text ">
+          <p><span>教师课题管理</span></p>
         </div>
       </div>
-      <div id="u364" style="display:none; visibility:hidden;"></div>
+      <div id="u495" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (表格) -->
-      <div id="u368" class="ax_default">
+      <div id="u499" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u369" class="ax_default table_cell">
-          <img id="u369_img" class="img " src="images/学生查看选题结果/u369.png"/>
-          <div id="u369_text" class="text ">
+        <div id="u500" class="ax_default table_cell">
+          <img id="u500_img" class="img " src="images/学生查看选题结果/u500.png"/>
+          <div id="u500_text" class="text ">
             <p><span>课题名称</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u370" class="ax_default table_cell">
-          <img id="u370_img" class="img " src="images/学生查看选题结果/u369.png"/>
-          <div id="u370_text" class="text ">
+        <div id="u501" class="ax_default table_cell">
+          <img id="u501_img" class="img " src="images/学生查看选题结果/u500.png"/>
+          <div id="u501_text" class="text ">
             <p><span>指导老师</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u371" class="ax_default table_cell">
-          <img id="u371_img" class="img " src="images/学生查看选题结果/u369.png"/>
-          <div id="u371_text" class="text ">
+        <div id="u502" class="ax_default table_cell">
+          <img id="u502_img" class="img " src="images/学生查看选题结果/u500.png"/>
+          <div id="u502_text" class="text ">
             <p><span>结束时间</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u372" class="ax_default table_cell">
-          <img id="u372_img" class="img " src="images/学生查看选题结果/u369.png"/>
-          <div id="u372_text" class="text ">
+        <div id="u503" class="ax_default table_cell">
+          <img id="u503_img" class="img " src="images/学生查看选题结果/u500.png"/>
+          <div id="u503_text" class="text ">
             <p><span>查看详细</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u373" class="ax_default table_cell">
-          <img id="u373_img" class="img " src="images/学生查看选题结果/u373.png"/>
-          <div id="u373_text" class="text ">
+        <div id="u504" class="ax_default table_cell">
+          <img id="u504_img" class="img " src="images/学生查看选题结果/u504.png"/>
+          <div id="u504_text" class="text ">
             <p><span>状态</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u374" class="ax_default">
+      <div id="u505" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u375" class="ax_default table_cell">
-          <img id="u375_img" class="img " src="images/学生查看选题结果/u375.png"/>
-          <div id="u375_text" class="text ">
+        <div id="u506" class="ax_default table_cell">
+          <img id="u506_img" class="img " src="images/学生查看选题结果/u506.png"/>
+          <div id="u506_text" class="text ">
             <p><span>课题1</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u376" class="ax_default table_cell">
-          <img id="u376_img" class="img " src="images/学生查看选题结果/u375.png"/>
-          <div id="u376_text" class="text ">
+        <div id="u507" class="ax_default table_cell">
+          <img id="u507_img" class="img " src="images/学生查看选题结果/u506.png"/>
+          <div id="u507_text" class="text ">
             <p><span style="text-decoration:underline ;">xxx</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u377" class="ax_default table_cell">
-          <img id="u377_img" class="img " src="images/学生查看选题结果/u377.png"/>
-          <div id="u377_text" class="text ">
+        <div id="u508" class="ax_default table_cell">
+          <img id="u508_img" class="img " src="images/学生查看选题结果/u508.png"/>
+          <div id="u508_text" class="text ">
             <p><span>2017-10-9</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u378" class="ax_default table_cell">
-          <img id="u378_img" class="img " src="images/学生查看选题结果/u378.png"/>
-          <div id="u378_text" class="text ">
+        <div id="u509" class="ax_default table_cell">
+          <img id="u509_img" class="img " src="images/学生查看选题结果/u509.png"/>
+          <div id="u509_text" class="text ">
             <p><span style="text-decoration:underline ;">查看</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u379" class="ax_default table_cell">
-          <img id="u379_img" class="img " src="images/学生查看选题结果/u379.png"/>
-          <div id="u379_text" class="text ">
+        <div id="u510" class="ax_default table_cell">
+          <img id="u510_img" class="img " src="images/学生查看选题结果/u510.png"/>
+          <div id="u510_text" class="text ">
             <p><span>通过</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u380" class="ax_default table_cell">
-          <img id="u380_img" class="img " src="images/学生查看选题结果/u369.png"/>
-          <div id="u380_text" class="text ">
+        <div id="u511" class="ax_default table_cell">
+          <img id="u511_img" class="img " src="images/学生查看选题结果/u500.png"/>
+          <div id="u511_text" class="text ">
             <p><span>课题2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u381" class="ax_default table_cell">
-          <img id="u381_img" class="img " src="images/学生查看选题结果/u369.png"/>
-          <div id="u381_text" class="text ">
+        <div id="u512" class="ax_default table_cell">
+          <img id="u512_img" class="img " src="images/学生查看选题结果/u500.png"/>
+          <div id="u512_text" class="text ">
             <p><span style="text-decoration:underline ;">xxx</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u382" class="ax_default table_cell">
-          <img id="u382_img" class="img " src="images/学生查看选题结果/u382.png"/>
-          <div id="u382_text" class="text ">
+        <div id="u513" class="ax_default table_cell">
+          <img id="u513_img" class="img " src="images/学生查看选题结果/u513.png"/>
+          <div id="u513_text" class="text ">
             <p><span>2017-10-9</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u383" class="ax_default table_cell">
-          <img id="u383_img" class="img " src="images/学生查看选题结果/u383.png"/>
-          <div id="u383_text" class="text ">
+        <div id="u514" class="ax_default table_cell">
+          <img id="u514_img" class="img " src="images/学生查看选题结果/u514.png"/>
+          <div id="u514_text" class="text ">
             <p><span style="text-decoration:underline ;">查看</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u384" class="ax_default table_cell">
-          <img id="u384_img" class="img " src="images/学生查看选题结果/u373.png"/>
-          <div id="u384_text" class="text ">
+        <div id="u515" class="ax_default table_cell">
+          <img id="u515_img" class="img " src="images/学生查看选题结果/u504.png"/>
+          <div id="u515_text" class="text ">
             <p><span>未通过</span></p>
           </div>
         </div>
